--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">Seniors-at-Work</string>
+    <string name="drawer_open">Drawer Open</string>
+    <string name="drawer_close">Drawer Close</string>
 
     <string name="title_activity_fullscreen_video">FullscreenVideo</string>
     <string name="dummy_button">Dummy Button</string>
